--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "graduation.jpeg"
   name             : "Harriet Turner"
   pronouns         : "she/her"  
-  bio              : "Postdoctoral research assistant in solar wind forecasting at the University of Reading. "
+  bio              : "Space weather scientist at the UK Met Office. "
   location         : # "Earth"
   employer         : "University of Reading"
   uri              : # URL
